# drf

./: Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml  requirements.txt  start_celery.sh  start_web.sh  wsgi.py
.github/workflows/: ci.yaml
articles/: managers.py  serializers.py  urls.py  views.py
articles/managers/: __init__.py  article.py  comment.py
articles/migrations/: 0001_initial.py  0002_article_uuid.py  0004_rename_user_comment_author.py
articles/models/: article.py  comment.py
articles/serializers/: __init__.py  comment.py
articles/views/: article.py  comment.py
d3/: settings.py  urls.py  views.py
d3/templates/d3/: base.html  main_info.html
main/: settings.py  urls.py  views.py
main/apps/articles/: apps.py  (+1 more)
main/libs/: celery.py
main/settings/: __init__.py  base.py  celery.py  testing.py
src/: .env.example  environment.py
src/portfolio/: views.py
templates/: README.md
templates/account/: login.html
templates/allauth/: login.html
templates/main/: article_list.html  base.html  main_info.html
tests/: conftest.py  db.py  test_articles.py  test_comments.py  test_main_info.py  test_users.py
users/: admin.py  backends.py  managers.py  models.py  serializers.py  urls.py  views.py
users/managers/: profile.py
users/migrations/: 0001_initial.py  0002_d3user_groups_d3user_user_permissions.py  0003_delete_article.py  0003_groupproxy_alter_d3user_groups.py  0004_profile_first_name_profile_last_name.py  0005_profile_created_at_profile_updated_at_profile_uuid.py
users/models/: __init__.py  profile.py  user.py
(+50 files in other folders)
