[tool.poetry]
name = "main."
version = "0.1.0"
description = "REST API"
authors = ["Denys <denysburimov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
djangorestframework = "^3.15.1"
pytest = "^8.2.0"
pytest-django = "^4.8.0"
django-environ = "^0.11.2"
psycopg2 = "^2.9.9"
faker = "^25.0.1"
django-extensions = "^3.2.3"
pytest-env = "^1.1.3"
django-tailwind = "^3.8.0"
django-browser-reload = "^1.12.1"

[tool.pytest.ini_options]
testpaths = "tests"
DJANGO_SETTINGS_MODULE = "main.settings"
python_files = "test_*.py"

[tool.pytest_env]
APP_ENV = "testing"
